# TimedMutesApi

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  entrypoint.sh
migrations/2024-07-24-201115_create_timed_mute/: down.sql  up.sql
migrations/2024-08-01-021706_create_timed_mute_word/: down.sql  up.sql
src/: agent.rs  error.rs  errors.rs  helper.rs  main.rs  models.rs  scheduler.rs  schema.rs  tmute.rs  user.rs
