[package]
name = "TimedMutes"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
axum = "0.7.9"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower-sessions = "0.12.2"
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
env_logger = "0.11.4"
serde = { version = "1.0.204", features = ["derive"] }
chrono = "0.4.38"
bsky-sdk = "0.1.6"
ipld-core = "0.4.1"
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
derive_more = { version = "2.1.1", features = ["full"] }
serde_json = "1.0"

[[bin]]
name = "TimedMutes"
